@@ -29,6 +29,8 @@ DIST genpatches-3.16-8.base.tar.xz 247036 SHA256 8959b280c4cf4a60f94a026a5087ff8
 DIST genpatches-3.16-8.extras.tar.xz 17660 SHA256 628ac76c67579c3aea1724180d4f72c65835c1cea85bf49f7f151ba380e2e1a9 SHA512 b1eb45e319fc967ac63757a04c85ceb13c712341e4e8ab9498735f6dd588759969d00209572b14722597e7906043468c334e90d39baa05d3a47c543b4e5de0dc WHIRLPOOL 16a9d602f76c148d330aa3fd5d5eeb2e959ab979004fab451bedc669d188ac8b37ff31f74ee6cd915c0c03abc6baa3fd385fa34453487ec2d4196f76c3778498
 DIST genpatches-3.17-3.base.tar.xz 19356 SHA256 cab4ae1f4a634a80fdaed7564409c07b21f92fb82939926ce5b811629f937261 SHA512 f7178667443ad7c0b74dd5ccf71e43d300f69bd27f79fdd126e46f5b0978b9c80aeda1fe0960285f4f8b25ca1a68598088814c74476a4aa128188ad116debb6d WHIRLPOOL 00f0c02b735ef06d86d386c8c09d8daa86368f00d1b84525f513923c5657a5bb05a4c6cc162c7639c92c9ff2f55401a9d5df6679362c28471e3aa0370f1c23ac
 DIST genpatches-3.17-3.extras.tar.xz 16156 SHA256 2b7be75015006f577aa4cae61f252bfd70202950dc6032dfafa89cee95004030 SHA512 457db9f84251ae557610f5bcc389c61e160870eef2a16f2d5a8437d96e7ab92a89cb59f1b056d0632bae12cd92a5ce017303b7ab52034fd59be24b0c2dc44dba WHIRLPOOL 23dc85f39fa7daacd92ea617c461585d5197e12d291e7dc14cc5088d510d990df1c77ca4856292cc2ec835287f9d9067c5dbbd8c1b216c96fdccdc928aebf9a3
+DIST genpatches-3.17-5.base.tar.xz 82456 SHA256 885e11de3404236b16e9938e14b1d85cb324b72037a86e80b9e59c5600042358 SHA512 410018df423ed56e6ab14fcf7bb6d0e52027601029cd3d9a1e0d37cb7a378b80fa99f4a6f3d170519358daf2489b1d9a9e75e174c2b39966b57355fdad1f3593 WHIRLPOOL 3be1ec93d578192637da4ab4af745218b5b63a6533d0105a4d4f8b7c9bea171eb4f1a95a634b6c91c99218f360c070bd56596ebda9fc301043977a1d0aee2d17
+DIST genpatches-3.17-5.extras.tar.xz 16160 SHA256 93f3fe9d3c6d46b316186a54e598376df4c08dc00ef5c185f7a7e1048799fc62 SHA512 6055fd4b6f3066d19d1358d9a6d08d5717fb63add6ace3a1c9595d88913e1a2890115ba1a281717127c098e498da8dfda7112a6a35abc5ac1e3e8139e8c3c3f1 WHIRLPOOL 21cd5152efb31f2ab7048f19a82690f64256a1c81ea3cc5f04232dac63ef2923fa1dacb616cd0a50168d706aa21824f4eb25ad58461cca425322f9bfaf4c565e
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
